<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dotextras_title">DotExtras</string>
    <string name="build_tweaks_summary_title">Align the Dots In your Style</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="icons_category">Icons</string>
    <string name="light_category">Lights</string>
    <string name="dlg_ok">OK</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="statusbar">Statusbar</string>
    <string name="navigation">Navigation Bar</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="recents">Recents</string>
    <string name="power_menu">Power Menu</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="system">System</string>
    <string name="powermenu_reboot_title">Reboot</string>
    <string name="powermenu_advanced_reboot_title">Advanced reboot</string>
    <string name="powermenu_advanced_reboot_summary">Enables the advanced reboot menu for rebooting options such hot, recovery and bootloader. Also adds as an option to restart SystemUI</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_airplane_title">Airplane mode</string>
    <string name="powermenu_category_visibility">Lockscreen options</string>
    <string name="powermenu_lockscreen_title">Visibility on the lockscreen</string>
    <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>
    <string name="powermenu_ls_reboot_summary">Show the reboot option on the lockscreen</string>
    <string name="powermenu_ls_advanced_reboot_summary">Show the advanced reboot option on the lockscreen</string>
    <string name="powermenu_ls_screenshot_summary">Show the screenshot option on the lockscreen</string>
    <string name="powermenu_ls_airplane_summary">Show the airplane mode option on the lockscreen</string>
    <string name="buttons_title">Buttons</string>
    <string name="lockscreen_items_other">Other</string>
    <string name="general_category">General</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="notifications_panel_category">Notifications</string>
    <string name="general_tweaks_title">General Tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="misc_extras_title">Misc Extras</string>
    <string name="recents_ui_title">Recents UI</string>
    <string name="aosp_recents_category">AOSP recents</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="notifications_title">Notifications</string>
    <string name="smart_pixels_warning_text">Smart pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see a significant improvement in battery life. For a good user experience, we recommend you set the amount of disabled pixels at 75 percent.</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="app_ops_category">App Ops</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="immersive_recents_title">Immersive Recents</string>
    <string name="immersive_recents_summary">Change the view of the recents screen</string>
    <string name="immersive_recents_dialog_title">Select recents view</string>
    <string name="immersive_recents_default">Default</string>
    <string name="immersive_recents_fullscreen">Fullscreen</string>
    <string name="immersive_recents_statusbar">Statusbar only</string>
    <string name="immersive_recents_navbar">Navbar only</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_mode_summary">Select which navigation mode to use on your device</string>
    <string name="navbar_visibility">Allow navigation bar</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Stock</string>
    <string name="default_settings">Stock settings</string>
    <string name="default_settings_summary">Stock AOSP navigation bar</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_settings_summary">A very unique and fully-customizable gesture-based navigation bar</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first.\n\nAlso, setting a double tap action will delay single tap a bit.</string>
    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar.</string>
    <string name="fling_def_summary">No action set</string>
    <string name="fling_swipe_actions">Swipe gestures</string>
    <string name="fling_tap_actions">Tap gestures</string>
    <string name="fling_short_swipe_right">Right short swipe</string>
    <string name="fling_short_swipe_left">Left short swipe</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="recents_show_membar_title">Memory bar</string>
    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
    <string name="lockscreen_tuner_title">Lockscreen Tuner</string>
    <string name="hide_lockscreen_items_title">Lockscreen items</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double-tap on lockscreen to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="battery_style_category_title">Battery icon</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="hide_lockscreen_status_bar_title">Hide status bar</string>
    <string name="hide_lockscreen_status_bar_summary">Touch status bar to toggle visibility</string>
    <string name="hide_lockscreen_indicator_display_title">Hide bottom status text</string>
    <string name="hide_lockscreen_indicator_display_summary">Hide charging information and unlock hints</string>
    <string name="hide_lockscreen_icon_title">Hide lock screen icon</string>
    <string name="hide_lockscreen_icon_summary">Change the lock screen icon visibility</string>
    <string name="show_lockscreen_clock_title">Clock widget</string>
    <string name="show_lockscreen_clock_summary">Change the clock widget\'s visibility</string>
    <string name="show_lockscreen_date_title">Date widget</string>
    <string name="show_lockscreen_date_summary">Change the date\'s visibility underneath the clock widget</string>
    <string name="show_lockscreen_alarm_title">Alarm text</string>
    <string name="show_lockscreen_alarm_summary">Change the alarm text\'s visibility underneath the clock widget</string>
    <string name="lockscreen_clock_selection_title">Clock style</string>
    <string name="lockscreen_date_selection_title">Date style</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="vibration_on_charge_state_changed_title">Vibrate on plug</string>
    <string name="vibration_on_charge_state_changed_summary">Vibrate device when device connected to power source</string>
    <string name="lockscreen_visualizer_title">Lockscreen visualizer</string>
    <string name="lockscreen_visualizer_summary">Displays a live design on lockscreen while music is playing</string>
    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
    <string name="block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
</resources>