<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 Project dotOS
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_ui_title">

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_lockscreen"
        android:title="@string/double_tap_to_sleep_lockscreen_title"
        android:summary="@string/double_tap_to_sleep_lockscreen_summary"
        android:defaultValue="true" />

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="fingerprint_success_vib"
        android:title="@string/fprint_sucess_vib_title"
        android:summary="@string/fprint_sucess_vib_summary"
        android:defaultValue="true" />

    <com.dot.dotextras.preference.SecureSettingSwitchPreference
        android:key="face_auto_unlock"
        android:title="@string/face_auto_unlock_title"
        android:summary="@string/face_auto_unlock_summary"
        android:defaultValue="false" />
		
	<com.dot.dotextras.preference.SecureSettingSwitchPreference
        android:key="status_bar_locked_on_secure_keyguard"
        android:title="@string/block_on_secure_keyguard_title"
        android:summary="@string/block_on_secure_keyguard_summary"
        android:defaultValue="false"/>

    <ListPreference
        android:key="lockscreen_clock_selection"
        android:title="@string/lockscreen_clock_selection_title"
        android:entries="@array/lockscreen_clock_selection_entries"
        android:entryValues="@array/lockscreen_clock_selection_values"
        android:defaultValue="0"
        android:dependency="hide_lockscreen_clock" />

    <ListPreference
        android:key="lockscreen_date_selection"
        android:title="@string/lockscreen_date_selection_title"
        android:entries="@array/lockscreen_date_selection_entries"
        android:entryValues="@array/lockscreen_date_selection_values"
        android:defaultValue="0"
        android:dependency="hide_lockscreen_date" />

    <Preference
            android:title="@string/lockscreen_tuner_title" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
    </Preference>

    <PreferenceCategory
            android:key="hide_lockscreen_items_category"
            android:title="@string/hide_lockscreen_items_title" >

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="true" />

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="hide_lockscreen_clock"
        android:title="@string/show_lockscreen_clock_title"
        android:summary="@string/show_lockscreen_clock_summary"
        android:defaultValue="true" />

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="hide_lockscreen_date"
        android:title="@string/show_lockscreen_date_title"
        android:summary="@string/show_lockscreen_date_summary"
        android:defaultValue="true" />

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="hide_lockscreen_alarm"
        android:title="@string/show_lockscreen_alarm_title"
        android:summary="@string/show_lockscreen_alarm_summary"
        android:defaultValue="true" />

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="hide_lockscreen_status_bar"
        android:title="@string/hide_lockscreen_status_bar_title"
        android:summary="@string/hide_lockscreen_status_bar_summary"
        android:defaultValue="false" />

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="hide_lockscreen_indicator_display"
        android:title="@string/hide_lockscreen_indicator_display_title"
        android:summary="@string/hide_lockscreen_indicator_display_summary"
        android:defaultValue="false" />

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="hide_lockscreen_icon"
        android:title="@string/hide_lockscreen_icon_title"
        android:summary="@string/hide_lockscreen_icon_summary"
        android:defaultValue="false" />

    <com.dot.dotextras.preference.SecureSettingSwitchPreference
        android:key="lockscreen_visualizer"
        android:title="@string/lockscreen_visualizer_title"
        android:summary="@string/lockscreen_visualizer_summary"
        android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>
