<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 Project dotOS
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misc_extras_title">

    <PreferenceCategory
        android:key="misc_extensions_icons_category"
        android:title="@string/icons_category">

         <com.dot.dotextras.preference.SystemSettingSwitchPreference
             android:key="roaming_indicator_icon"
             android:title="@string/roaming_indicator_icon_title"
             android:summary="@string/roaming_indicator_icon_summary"
             android:defaultValue="true"/>
			 
		<com.dot.dotextras.preference.SystemSettingSwitchPreference
             android:key="data_disabled_icon"
             android:title="@string/data_disabled_icon_title"
             android:summary="@string/data_disabled_icon_summary"
             android:defaultValue="true"/>
			 
    </PreferenceCategory>
	
     <com.dot.dotextras.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_to_sleep_title"
        android:summary="@string/double_tap_to_sleep_summary"
        android:defaultValue="true" />

     <com.dot.dotextras.preference.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
			
	<!-- Vibrate on plugged --> 
    <com.dot.dotextras.preference.SystemSettingSwitchPreference 
        android:key="vibration_on_charge_state_changed" 
        android:title="@string/vibration_on_charge_state_changed_title" 
        android:summary="@string/vibration_on_charge_state_changed_summary" 
        android:defaultValue="false" /> 
</PreferenceScreen>
