<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.dot.dotextras.preference.SystemSettingSwitchPreference
         android:key="systemui_recents_mem_display"
         android:title="@string/recents_show_membar_title"
         android:summary="@string/recents_show_membar_summary"
         android:defaultValue="false" />

       <ListPreference
        android:key="immersive_recents"
        android:title="@string/immersive_recents_title"
        android:summary="@string/immersive_recents_summary"
        android:dialogTitle="@string/immersive_recents_dialog_title"
        android:entries="@array/immersive_recents_entries"
        android:entryValues="@array/immersive_recents_values"
        android:persistent="false" />

</PreferenceScreen>
