<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
			
		<Preference
            android:key="misc_extras"
            android:fragment="com.dot.dotextras.MiscExtras"
            android:icon="@drawable/ic_misc_extras"
            android:title="@string/misc_extras_title" />

		<Preference
		android:key="battery_settings"
		android:title="@string/battery_style_category_title"
		android:summary="@string/battery_style_category_summary"
		android:fragment="com.dot.dotextras.fragments.StatusBarBattery" />

		<Preference
        android:key="traffic"
        android:fragment="com.dot.dotextras.fragments.Traffic"
        android:icon="@drawable/ic_traffic"
        android:title="@string/traffic_title" />

</PreferenceScreen>
