<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2017 dotOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
    <PreferenceCategory
      android:title="@string/network_traffic_title">

    <com.dotos.dotextras.preferences.SystemSettingSwitchPreference
        android:key="network_traffic_state"
        android:title="@string/network_traffic_state_title"
        android:defaultValue="true" />

    <ListPreference
        android:key="network_traffic_type"
        android:title="@string/network_traffic_type"
        android:entries="@array/show_network_traffic_type_entries"
        android:entryValues="@array/show_network_traffic_type_values"
        android:dependency="network_traffic_state"
        android:persistent="false" />

    <com.dotos.dotextras.preferences.CustomSeekBarPreference
        android:key="network_traffic_autohide_threshold"
        android:title="@string/network_traffic_autohide_threshold_title"
        android:max="10"
        settings:min="0"
        settings:units="" />

    </PreferenceCategory>